[feature] Add facebook bot engine. Refactoring code

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,5 @@ include(':bot-core')
 include(':telegram-bot-engine')
 include(':telegram-api')
 include(':facebook-api')
+include(':facebook-bot-engine')
 include(':samples')
